tests/build/cases/widget_new/missing_semi2.stderr
error: expected `;`
 --> cases/widget_new/missing_semi2.rs:9:9
  |
9 |         enabled = true;
  |         ^^^^^^^
